--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,25 +6,38 @@
     android:layout_height="match_parent"
     tools:context="com.example.rodneytressler.week3assessmentkey.MainActivity">
 
-    <FrameLayout
-        android:layout_margin="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/fragment_holder"
-        android:layout_width="match_parent"
-        android:layout_height="200dp">
-
-    </FrameLayout>
-
     <TextView
         android:id="@+id/welcome_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
+        android:layout_marginTop="24dp"
+        android:text="@string/welcome_string"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_holder" />
+
+    <FrameLayout
+        android:id="@+id/fragment_holder"
+        android:layout_width="368dp"
+        android:layout_height="200dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_holder" />
+        app:layout_constraintTop_toTopOf="parent">
 
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/fate_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="The fate of the World is in your hands"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />
 </android.support.constraint.ConstraintLayout>
